--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,5 @@
 /app/build/intermediates/incremental/debug-mergeJavaRes/zip-cache/ZsjwsAPja+9MB_RdjAh2YTTpHjE=
 /app/build/intermediates/incremental/debug-mergeJavaRes/zip-cache/ZTUuy0CA04obyXkdeYeyp+yIMkI=
 /app/build/intermediates/incremental/debug-mergeJavaRes/zip-cache/zWiqnN2PDRQI0PNc9fs1vblN2L4=
+
+/.idea
